--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.5.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
